# ibdgen

./: .gitignore  3 from 7.xlsx  Cargo.toml  README  README.md  runoutput.txt  rustoutput.txt
csrc/: Makefile  OptBlock.c  OptBlock.h  OptBlock.zig  build.zig  build.zig.zon  output.txt  runoutput.txt
csrc/src/: main.zig
src/: block_array.rs  block_result.rs  coincidence_matrix.rs  create_ibd.rs  ibd.rs  lib.rs  main.rs  opt_block.rs  random_type.rs
tests/: integration_tests.rs
