[package]
name = "ibdgen"
description = "Generate incomplete block designs for experiments with prohibited pairs"
version = "0.1.2"
edition = "2021"
authors = ["Miles Gard <miles@consultimi.com>"]
license = "GPL-3.0-or-later"
categories = ["science", "mathematics"]
keywords = ["statistics", "doe", "experimental-design"]
repository = "https://github.com/consultimi/ibdgen"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
derive_builder = "0.20.2"
nalgebra = "0.33.2"
pretty-print-nalgebra = "0.1.0"
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
